--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "@slack/web-api": "^5.8.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
